// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`plugin-postcssLegacy > should allow tools.postcss to override the plugins 1`] = `
[
  {
    "resolve": {
      "preferRelative": true,
    },
    "sideEffects": true,
    "test": /\\\\\\.css\\$/,
    "type": "javascript/auto",
    "use": [
      {
        "loader": "<WORKSPACE>/node_modules/<PNPM_INNER>/@rspack/core/dist/builtin-plugin/css-extract/loader.js",
      },
      {
        "loader": "<WORKSPACE>/node_modules/<PNPM_INNER>/@rsbuild/core/compiled/css-loader/index.js",
        "options": {
          "importLoaders": 1,
          "modules": {
            "auto": true,
            "exportGlobals": false,
            "exportLocalsConvention": "camelCase",
            "localIdentName": "[path][name]__[local]-[hash:base64:6]",
            "namedExport": false,
          },
          "sourceMap": true,
        },
      },
      {
        "loader": "<WORKSPACE>/node_modules/<PNPM_INNER>/@rsbuild/core/compiled/postcss-loader/index.js",
        "options": {
          "implementation": "<WORKSPACE>/node_modules/<PNPM_INNER>/@rsbuild/core/compiled/postcss/index.js",
          "postcssOptions": {
            "config": false,
            "plugins": [
              [Function],
              [Function],
              [Function],
              [Function],
              [Function],
              [Function],
              [Function],
              {
                "browsers": [
                  "> 0.01%",
                  "not dead",
                  "not op_mini all",
                ],
                "info": [Function],
                "options": {
                  "flexbox": "no-2009",
                  "overrideBrowserslist": [
                    "> 0.01%",
                    "not dead",
                    "not op_mini all",
                  ],
                },
                "postcssPlugin": "autoprefixer",
                "prepare": [Function],
              },
              {
                "AtRule": {},
                "postcssPlugin": "postcss-plugin-test",
              },
            ],
          },
          "sourceMap": true,
        },
      },
    ],
  },
]
`;

exports[`plugin-postcssLegacy > should allow tools.postcss to override the plugins 2`] = `
[
  {
    "resolve": {
      "preferRelative": true,
    },
    "sideEffects": true,
    "test": /\\\\\\.s\\(\\?:a\\|c\\)ss\\$/,
    "use": [
      {
        "loader": "<WORKSPACE>/node_modules/<PNPM_INNER>/@rspack/core/dist/builtin-plugin/css-extract/loader.js",
      },
      {
        "loader": "<WORKSPACE>/node_modules/<PNPM_INNER>/@rsbuild/core/compiled/css-loader/index.js",
        "options": {
          "importLoaders": 3,
          "modules": {
            "auto": true,
            "exportGlobals": false,
            "exportLocalsConvention": "camelCase",
            "localIdentName": "[path][name]__[local]-[hash:base64:6]",
            "namedExport": false,
          },
          "sourceMap": true,
        },
      },
      {
        "loader": "<WORKSPACE>/node_modules/<PNPM_INNER>/@rsbuild/core/compiled/postcss-loader/index.js",
        "options": {
          "implementation": "<WORKSPACE>/node_modules/<PNPM_INNER>/@rsbuild/core/compiled/postcss/index.js",
          "postcssOptions": {
            "config": false,
            "plugins": [
              [Function],
              [Function],
              [Function],
              [Function],
              [Function],
              [Function],
              [Function],
              {
                "browsers": [
                  "> 0.01%",
                  "not dead",
                  "not op_mini all",
                ],
                "info": [Function],
                "options": {
                  "flexbox": "no-2009",
                  "overrideBrowserslist": [
                    "> 0.01%",
                    "not dead",
                    "not op_mini all",
                  ],
                },
                "postcssPlugin": "autoprefixer",
                "prepare": [Function],
              },
              {
                "AtRule": {},
                "postcssPlugin": "postcss-plugin-test",
              },
            ],
          },
          "sourceMap": true,
        },
      },
      {
        "loader": "<WORKSPACE>/node_modules/<PNPM_INNER>/@rsbuild/plugin-sass/compiled/resolve-url-loader/index.js",
        "options": {
          "join": [Function],
          "sourceMap": false,
        },
      },
      {
        "loader": "<WORKSPACE>/node_modules/<PNPM_INNER>/@rsbuild/plugin-sass/compiled/sass-loader/index.js",
        "options": {
          "api": "modern-compiler",
          "implementation": "<WORKSPACE>/node_modules/<PNPM_INNER>/sass-embedded/dist/lib/index.js",
          "sourceMap": true,
        },
      },
    ],
  },
]
`;

exports[`plugin-postcssLegacy > should allow tools.postcss to override the plugins 3`] = `
[
  {
    "resolve": {
      "preferRelative": true,
    },
    "sideEffects": true,
    "test": /\\\\\\.less\\$/,
    "use": [
      {
        "loader": "<WORKSPACE>/node_modules/<PNPM_INNER>/@rspack/core/dist/builtin-plugin/css-extract/loader.js",
      },
      {
        "loader": "<WORKSPACE>/node_modules/<PNPM_INNER>/@rsbuild/core/compiled/css-loader/index.js",
        "options": {
          "importLoaders": 2,
          "modules": {
            "auto": true,
            "exportGlobals": false,
            "exportLocalsConvention": "camelCase",
            "localIdentName": "[path][name]__[local]-[hash:base64:6]",
            "namedExport": false,
          },
          "sourceMap": true,
        },
      },
      {
        "loader": "<WORKSPACE>/node_modules/<PNPM_INNER>/@rsbuild/core/compiled/postcss-loader/index.js",
        "options": {
          "implementation": "<WORKSPACE>/node_modules/<PNPM_INNER>/@rsbuild/core/compiled/postcss/index.js",
          "postcssOptions": {
            "config": false,
            "plugins": [
              [Function],
              [Function],
              [Function],
              [Function],
              [Function],
              [Function],
              [Function],
              {
                "browsers": [
                  "> 0.01%",
                  "not dead",
                  "not op_mini all",
                ],
                "info": [Function],
                "options": {
                  "flexbox": "no-2009",
                  "overrideBrowserslist": [
                    "> 0.01%",
                    "not dead",
                    "not op_mini all",
                  ],
                },
                "postcssPlugin": "autoprefixer",
                "prepare": [Function],
              },
              {
                "AtRule": {},
                "postcssPlugin": "postcss-plugin-test",
              },
            ],
          },
          "sourceMap": true,
        },
      },
      {
        "loader": "<WORKSPACE>/node_modules/<PNPM_INNER>/@rsbuild/plugin-less/compiled/less-loader/index.js",
        "options": {
          "implementation": "<WORKSPACE>/node_modules/<PNPM_INNER>/@rsbuild/plugin-less/compiled/less/index.js",
          "lessOptions": {
            "javascriptEnabled": true,
            "paths": [
              "node_modules",
            ],
          },
          "sourceMap": true,
        },
      },
    ],
  },
]
`;

exports[`plugin-postcssLegacy > should register postcss plugin by browserslist 1`] = `
[
  {
    "resolve": {
      "preferRelative": true,
    },
    "sideEffects": true,
    "test": /\\\\\\.css\\$/,
    "type": "javascript/auto",
    "use": [
      {
        "loader": "<WORKSPACE>/node_modules/<PNPM_INNER>/@rspack/core/dist/builtin-plugin/css-extract/loader.js",
      },
      {
        "loader": "<WORKSPACE>/node_modules/<PNPM_INNER>/@rsbuild/core/compiled/css-loader/index.js",
        "options": {
          "importLoaders": 1,
          "modules": {
            "auto": true,
            "exportGlobals": false,
            "exportLocalsConvention": "camelCase",
            "localIdentName": "[path][name]__[local]-[hash:base64:6]",
            "namedExport": false,
          },
          "sourceMap": true,
        },
      },
      {
        "loader": "<WORKSPACE>/node_modules/<PNPM_INNER>/@rsbuild/core/compiled/postcss-loader/index.js",
        "options": {
          "implementation": "<WORKSPACE>/node_modules/<PNPM_INNER>/@rsbuild/core/compiled/postcss/index.js",
          "postcssOptions": {
            "config": false,
            "plugins": [
              [Function],
              [Function],
              [Function],
              {
                "browsers": [
                  "chrome >= 87",
                ],
                "info": [Function],
                "options": {
                  "flexbox": "no-2009",
                  "overrideBrowserslist": [
                    "chrome >= 87",
                  ],
                },
                "postcssPlugin": "autoprefixer",
                "prepare": [Function],
              },
            ],
          },
          "sourceMap": true,
        },
      },
    ],
  },
]
`;

exports[`plugin-postcssLegacy > should register postcss plugin by browserslist 2`] = `
[
  {
    "resolve": {
      "preferRelative": true,
    },
    "sideEffects": true,
    "test": /\\\\\\.s\\(\\?:a\\|c\\)ss\\$/,
    "use": [
      {
        "loader": "<WORKSPACE>/node_modules/<PNPM_INNER>/@rspack/core/dist/builtin-plugin/css-extract/loader.js",
      },
      {
        "loader": "<WORKSPACE>/node_modules/<PNPM_INNER>/@rsbuild/core/compiled/css-loader/index.js",
        "options": {
          "importLoaders": 3,
          "modules": {
            "auto": true,
            "exportGlobals": false,
            "exportLocalsConvention": "camelCase",
            "localIdentName": "[path][name]__[local]-[hash:base64:6]",
            "namedExport": false,
          },
          "sourceMap": true,
        },
      },
      {
        "loader": "<WORKSPACE>/node_modules/<PNPM_INNER>/@rsbuild/core/compiled/postcss-loader/index.js",
        "options": {
          "implementation": "<WORKSPACE>/node_modules/<PNPM_INNER>/@rsbuild/core/compiled/postcss/index.js",
          "postcssOptions": {
            "config": false,
            "plugins": [
              [Function],
              [Function],
              [Function],
              {
                "browsers": [
                  "chrome >= 87",
                ],
                "info": [Function],
                "options": {
                  "flexbox": "no-2009",
                  "overrideBrowserslist": [
                    "chrome >= 87",
                  ],
                },
                "postcssPlugin": "autoprefixer",
                "prepare": [Function],
              },
            ],
          },
          "sourceMap": true,
        },
      },
      {
        "loader": "<WORKSPACE>/node_modules/<PNPM_INNER>/@rsbuild/plugin-sass/compiled/resolve-url-loader/index.js",
        "options": {
          "join": [Function],
          "sourceMap": false,
        },
      },
      {
        "loader": "<WORKSPACE>/node_modules/<PNPM_INNER>/@rsbuild/plugin-sass/compiled/sass-loader/index.js",
        "options": {
          "api": "modern-compiler",
          "implementation": "<WORKSPACE>/node_modules/<PNPM_INNER>/sass-embedded/dist/lib/index.js",
          "sourceMap": true,
        },
      },
    ],
  },
]
`;

exports[`plugin-postcssLegacy > should register postcss plugin by browserslist 3`] = `
[
  {
    "resolve": {
      "preferRelative": true,
    },
    "sideEffects": true,
    "test": /\\\\\\.less\\$/,
    "use": [
      {
        "loader": "<WORKSPACE>/node_modules/<PNPM_INNER>/@rspack/core/dist/builtin-plugin/css-extract/loader.js",
      },
      {
        "loader": "<WORKSPACE>/node_modules/<PNPM_INNER>/@rsbuild/core/compiled/css-loader/index.js",
        "options": {
          "importLoaders": 2,
          "modules": {
            "auto": true,
            "exportGlobals": false,
            "exportLocalsConvention": "camelCase",
            "localIdentName": "[path][name]__[local]-[hash:base64:6]",
            "namedExport": false,
          },
          "sourceMap": true,
        },
      },
      {
        "loader": "<WORKSPACE>/node_modules/<PNPM_INNER>/@rsbuild/core/compiled/postcss-loader/index.js",
        "options": {
          "implementation": "<WORKSPACE>/node_modules/<PNPM_INNER>/@rsbuild/core/compiled/postcss/index.js",
          "postcssOptions": {
            "config": false,
            "plugins": [
              [Function],
              [Function],
              [Function],
              {
                "browsers": [
                  "chrome >= 87",
                ],
                "info": [Function],
                "options": {
                  "flexbox": "no-2009",
                  "overrideBrowserslist": [
                    "chrome >= 87",
                  ],
                },
                "postcssPlugin": "autoprefixer",
                "prepare": [Function],
              },
            ],
          },
          "sourceMap": true,
        },
      },
      {
        "loader": "<WORKSPACE>/node_modules/<PNPM_INNER>/@rsbuild/plugin-less/compiled/less-loader/index.js",
        "options": {
          "implementation": "<WORKSPACE>/node_modules/<PNPM_INNER>/@rsbuild/plugin-less/compiled/less/index.js",
          "lessOptions": {
            "javascriptEnabled": true,
            "paths": [
              "node_modules",
            ],
          },
          "sourceMap": true,
        },
      },
    ],
  },
]
`;
